important_logs/tporadowski___redis_build.log
Running command: make clean
cd src && make clean
make[1]: Entering directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/src'
rm -rf redis-server redis-sentinel redis-cli redis-benchmark redis-check-rdb redis-check-aof *.o *.gcda *.gcno *.gcov redis.info lcov-html Makefile.dep dict-benchmark
make[1]: Leaving directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/src'
Command finished with return code: 0

Running command: make distclean
cd src && make distclean
make[1]: Entering directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/src'
rm -rf redis-server redis-sentinel redis-cli redis-benchmark redis-check-rdb redis-check-aof *.o *.gcda *.gcno *.gcov redis.info lcov-html Makefile.dep dict-benchmark
(cd ../deps && make distclean)
make[2]: Entering directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/deps'
(cd hiredis && make clean) > /dev/null || true
(cd linenoise && make clean) > /dev/null || true
(cd lua && make clean) > /dev/null || true
(cd jemalloc && [ -f Makefile ] && make distclean) > /dev/null || true
/bin/sh: 1: cd: can't cd to jemalloc
(rm -f .make-*)
make[2]: Leaving directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/deps'
(rm -f .make-*)
make[1]: Leaving directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/src'
Command finished with return code: 0

Running command: rm -rf autom4te.cache
Command finished with return code: 0

Running command: rm -f config.status config.cache config.log
Command finished with return code: 0

Running command: ./autogen
/bin/sh: 1: ./autogen: not found
Command finished with return code: 127

Running command: ./configure
/bin/sh: 1: ./configure: not found
Command finished with return code: 127

Running command: make
cd src && make all
make[1]: Entering directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/src'
    [34mCC[0m [33mMakefile.dep[0m
rm -rf redis-server redis-sentinel redis-cli redis-benchmark redis-check-rdb redis-check-aof *.o *.gcda *.gcno *.gcov redis.info lcov-html Makefile.dep dict-benchmark
(cd ../deps && make distclean)
make[2]: Entering directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/deps'
(cd hiredis && make clean) > /dev/null || true
(cd linenoise && make clean) > /dev/null || true
(cd lua && make clean) > /dev/null || true
(cd jemalloc && [ -f Makefile ] && make distclean) > /dev/null || true
/bin/sh: 1: cd: can't cd to jemalloc
(rm -f .make-*)
make[2]: Leaving directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/deps'
(rm -f .make-*)
echo STD=-std=c99 -pedantic -DREDIS_STATIC='' >> .make-settings
echo WARN=-Wall -W -Wno-missing-field-initializers >> .make-settings
echo OPT=-O2 >> .make-settings
echo MALLOC=jemalloc >> .make-settings
echo CFLAGS= >> .make-settings
echo LDFLAGS= >> .make-settings
echo REDIS_CFLAGS= >> .make-settings
echo REDIS_LDFLAGS= >> .make-settings
echo PREV_FINAL_CFLAGS=-std=c99 -pedantic -DREDIS_STATIC='' -Wall -W -Wno-missing-field-initializers -O2 -g -ggdb   -I../deps/hiredis -I../deps/linenoise -I../deps/lua/src -DUSE_JEMALLOC -I../deps/jemalloc/include >> .make-settings
echo PREV_FINAL_LDFLAGS=  -g -ggdb -rdynamic >> .make-settings
(cd ../deps && make hiredis linenoise lua jemalloc)
make[2]: Entering directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/deps'
(cd hiredis && make clean) > /dev/null || true
(cd linenoise && make clean) > /dev/null || true
(cd lua && make clean) > /dev/null || true
(cd jemalloc && [ -f Makefile ] && make distclean) > /dev/null || true
/bin/sh: 1: cd: can't cd to jemalloc
(rm -f .make-*)
(echo "" > .make-cflags)
(echo "" > .make-ldflags)
[32;1mMAKE[0m [37;1mhiredis[0m
cd hiredis && make static
make[3]: Entering directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/deps/hiredis'
cc -std=c99 -pedantic -c -O3 -fPIC  -Wall -W -Wstrict-prototypes -Wwrite-strings -g -ggdb  net.c
In file included from hiredis.h:36,
                 from net.h:38,
                 from net.c:60:
read.h:78:50: error: unknown type name ‘PORT_LONGLONG’
   78 |     void *(*createInteger)(const redisReadTask*, PORT_LONGLONG);
      |                                                  ^~~~~~~~~~~~~
In file included from hiredis.h:45:
sds.h:295:21: error: unknown type name ‘PORT_LONGLONG’
  295 | sds sdsfromlonglong(PORT_LONGLONG value);
      |                     ^~~~~~~~~~~~~
hiredis.h:119:5: error: unknown type name ‘PORT_LONGLONG’
  119 |     PORT_LONGLONG integer; /* The integer when type is REDIS_REPLY_INTEGER */
      |     ^~~~~~~~~~~~~
net.c:212:53: error: unknown type name ‘PORT_LONG’
  212 | static int redisContextTimeoutMsec(redisContext *c, PORT_LONG *result)
      |                                                     ^~~~~~~~~
net.c:235:51: error: unknown type name ‘PORT_LONG’
  235 | static int redisContextWaitReady(redisContext *c, PORT_LONG msec) {
      |                                                   ^~~~~~~~~
net.c: In function ‘_redisContextConnectTcp’:
net.c:337:9: error: unknown type name ‘PORT_LONG’
  337 |         PORT_LONG timeout_msec = -1;
      |         ^~~~~~~~~
net.c:352:25: warning: implicit declaration of function ‘free’ [-Wimplicit-function-declaration]
  352 |                         free(c->tcp.host);
      |                         ^~~~
net.c:61:1: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
   60 | #include "net.h"
  +++ |+#include <stdlib.h>
   61 | #include "sds.h"
net.c:352:25: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
  352 |                         free(c->tcp.host);
      |                         ^~~~
net.c:352:25: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
net.c:360:46: warning: implicit declaration of function ‘malloc’ [-Wimplicit-function-declaration]
  360 |                                 c->timeout = malloc(sizeof(struct timeval));
      |                                              ^~~~~~
net.c:360:46: note: include ‘<stdlib.h>’ or provide a declaration of ‘malloc’
net.c:360:46: warning: incompatible implicit declaration of built-in function ‘malloc’ [-Wbuiltin-declaration-mismatch]
net.c:360:46: note: include ‘<stdlib.h>’ or provide a declaration of ‘malloc’
net.c:367:25: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
  367 |                         free(c->timeout);
      |                         ^~~~
net.c:367:25: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
net.c:371:13: warning: implicit declaration of function ‘redisContextTimeoutMsec’; did you mean ‘redisContextSetTimeout’? [-Wimplicit-function-declaration]
  371 |         if (redisContextTimeoutMsec(c, &timeout_msec) != REDIS_OK) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~
      |             redisContextSetTimeout
net.c:377:17: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
  377 |                 free(c->tcp.source_addr);
      |                 ^~~~
net.c:377:17: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
net.c:381:17: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
  381 |                 free(c->tcp.source_addr);
      |                 ^~~~
net.c:381:17: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
net.c:460:37: warning: implicit declaration of function ‘redisContextWaitReady’; did you mean ‘redisContextCloseFd’? [-Wimplicit-function-declaration]
  460 |                                 if (redisContextWaitReady(c, timeout_msec) != REDIS_OK)
      |                                     ^~~~~~~~~~~~~~~~~~~~~
      |                                     redisContextCloseFd
net.c: In function ‘redisContextConnectUnix’:
net.c:510:9: error: unknown type name ‘PORT_LONG’
  510 |         PORT_LONG timeout_msec = -1;
      |         ^~~~~~~~~
net.c:524:46: warning: incompatible implicit declaration of built-in function ‘malloc’ [-Wbuiltin-declaration-mismatch]
  524 |                                 c->timeout = malloc(sizeof(struct timeval));
      |                                              ^~~~~~
net.c:524:46: note: include ‘<stdlib.h>’ or provide a declaration of ‘malloc’
net.c:531:25: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
  531 |                         free(c->timeout);
      |                         ^~~~
net.c:531:25: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
make[3]: *** [Makefile:118: net.o] Error 1
make[3]: Leaving directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/deps/hiredis'
make[2]: *** [Makefile:46: hiredis] Error 2
make[2]: Leaving directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/deps'
make[1]: [Makefile:200: persist-settings] Error 2 (ignored)
    [34mCC[0m [33madlist.o[0m
In file included from adlist.c:36:
adlist.h:56:5: error: unknown type name ‘PORT_ULONG’
   56 |     PORT_ULONG len;
      |     ^~~~~~~~~~
adlist.h:88:33: error: unknown type name ‘PORT_LONG’
   88 | listNode *listIndex(list *list, PORT_LONG index);
      |                                 ^~~~~~~~~
In file included from adlist.c:37:
zmalloc.h:55:10: fatal error: jemalloc/jemalloc.h: No such file or directory
   55 | #include <jemalloc/jemalloc.h>
      |          ^~~~~~~~~~~~~~~~~~~~~
compilation terminated.
make[1]: *** [Makefile:248: adlist.o] Error 1
make[1]: Leaving directory '/INSTALL_C/repos/repos_400_c_round_two/tporadowski___redis/src'
make: *** [Makefile:6: all] Error 2
Command finished with return code: 2

